--- a/webapp/index.html
+++ b/webapp/index.html
@@ -89,13 +89,22 @@
 
         log("📩 Ответ от сервера: " + JSON.stringify(invoice));
 
-        if (!invoice?.slug) {
+        if (!invoice) {
           alert("Ошибка при создании оплаты. Попробуйте позже.");
           return;
         }
 
-        log("✅ Открытие оплаты...");
-        tg.openInvoice(invoice.slug);
+        if (invoice.slug) {
+          log("✅ Открытие оплаты через tg.openInvoice...");
+          tg.openInvoice(invoice.slug);
+        } else if (typeof invoice === 'string' && invoice.startsWith("https://t.me/")) {
+          log("✅ Открытие оплаты через переход по ссылке...");
+          window.location.href = invoice;
+        } else {
+          log("❌ Неизвестный формат инвойса. Ожидалась ссылка или slug.");
+          alert("Ошибка: неверный формат инвойса");
+        }
+
       } catch (e) {
         log("❌ Ошибка fetch: " + e);
         alert("Сервер недоступен. Попробуйте позже.");
